# pygent

./: .gitignore  .pre-commit-config.yaml  AGENT_LOOP_IMPROVEMENTS.md  README.md  coverage.txt  package.json  pyproject.toml
.github/workflows/: ci.yml
prompts/: base-prompt.txt
specs/: AGENT_LOOP_IMPROVEMENTS.md  PHASE-8-streaming-claude-max-provider.md  README.md  agent_flow.md  phase-1-mvp.md  phase-2-extended-tools.md  phase-3-advanced-features.md  phase-4-polish-distribution.md  phase-5-tui-enhancements.md  phase-6-syntax-highlighting.md  phase-7-litellm-gateway.md  progress-summary.txt  progress.txt  vision.md
src/chapgent/: cli.py
src/pygent/: cli.py
tests/: test_cli.py  test_config.py  test_config_cli.py  test_config_env.py  test_config_prompt.py  test_config_validation.py  test_config_writer.py  test_deprecation_warnings.py  test_logging.py  test_performance.py
tests/e2e/: test_full_workflow.py
tests/test_context/: test_detection.py  test_models.py  test_prompt.py
tests/test_core/: test_agent.py  test_cache.py  test_cancellation.py  test_loop.py  test_mock_provider.py  test_parallel.py  test_permissions.py  test_providers.py  test_providers_errors.py  test_recovery.py  test_stream_provider.py
tests/test_integration/: test_permission_flow.py  test_tui_actions.py
tests/test_session/: test_storage.py
tests/test_tools/: test_base.py  test_filesystem.py  test_git.py  test_registry.py  test_scaffold.py  test_search.py  test_shell.py  test_testing.py  test_web.py
tests/test_tui/: test_app.py  test_command_palette.py  test_commands.py  (+9 more)
(+88 files in other folders)
