[project]
name = "pygent"
version = "0.1.0"
description = "AI-powered coding agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiofiles>=23.0.0",
  "click>=8.0.0",
  "httpx>=0.27.0",
  "litellm>=1.0.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "textual>=0.50.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.scripts]
pygent = "pygent.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "types-aiofiles>=23.0.0",
  "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pygent"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --asyncio-mode=strict"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Ignore spurious RuntimeWarning from AsyncMock cleanup during hypothesis tests
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["pygent"]
explicit_package_bases = true

[dependency-groups]
dev = [
  "hypothesis>=6.150.2",
  "pytest-cov>=7.0.0",
]
